--- a/src/components/styles/ListVinyls.css
+++ b/src/components/styles/ListVinyls.css
@@ -1,4 +1,13 @@
+.list-vinyls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--spacing-medium);
+  width: 100%;
+}
+
 .list-vinyls-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  width: 100%;
 }
